[metadata]
name = peplink-api
version = 0.0.1
description = demands-based client for the PepLink Router API
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Stefano Rivera
maintainer_email = stefano@rivera.za.net
keywords = peplink, api client
license = ISC
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: ISC License (ISCL)
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Monitoring

[options]
zip_safe = true
packages = find:
include_package_data = true
install_requires =
    demands

[options.packages.find]
exclude =
    tests
